<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.rating.RatingActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/recipeImage"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/recipe_image"
        android:scaleType="centerCrop"
        android:src="@drawable/menu_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/calories"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:gravity="center_horizontal"
        android:paddingHorizontal="32dp"
        android:paddingVertical="8dp"
        android:text="@string/calories"
        android:textColor="@color/onPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/recipeImage"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/recipeName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:maxLines="2"
        android:text="@string/menu"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeImage" />

    <ImageView
        android:id="@+id/ratingImage"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/rating"
        android:src="@drawable/ic_rating"
        app:layout_constraintStart_toStartOf="@+id/recipeName"
        app:layout_constraintTop_toBottomOf="@+id/recipeName" />

    <TextView
        android:id="@+id/ratingNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ratingImage"
        app:layout_constraintStart_toEndOf="@+id/ratingImage"
        app:layout_constraintTop_toTopOf="@+id/ratingImage"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/rating" />

    <TextView
        android:id="@+id/rateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/rate_this_recipe"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ratingImage" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:contentDescription="@string/rating"
        android:numStars="5"
        android:progressTint="@color/gold"
        android:rating="0"
        android:stepSize="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rateTitle" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_to_eat"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

    <ScrollView
        android:id="@+id/menuList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/submitRatingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </RadioGroup>
    </ScrollView>

    <Button
        android:id="@+id/submitRatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/prompt_rate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>